enable preview from command line